--- a/build.yaml
+++ b/build.yaml
@@ -1,16 +1,15 @@
 ---
-name: "Template"
-guid: "eb5d7894-8eef-4b36-aa6f-5d124e828ce1"
-version: "1.0.0.0"
-targetAbi: "10.9.0.0"
-framework: "net8.0"
-overview: "Short description about your plugin"
+name: "Music Alias Resolver"
+guid: "1f2651b1-0793-4504-b1b1-5e4de18ba892"
+version: "0.1.0.0"
+targetAbi: "10.11.0.0"
+framework: "net9.0"
+overview: "Gets english name for music."
 description: >
-  This is a longer description that can span more than one
-  line and include details about your plugin.
+  Checks if Albums, Tracks, and Artists have english aliases.
 category: "General"
-owner: "jellyfin"
+owner: "Bobthesponge10"
 artifacts:
-- "Jellyfin.Plugin.Template.dll"
+- "Jellyfin.Plugin.AliasResolver.dll"
 changelog: >
   changelog
