--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,10 @@ jobs:
     needs:
       - build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    outputs:
+      release_url: ${{ steps.upload_zip.outputs.browser_download_url }}
     steps:
       - name: Download Artifact
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
@@ -52,44 +56,47 @@ jobs:
 
       - name: Upload GH Release Assets
         uses: shogo82148/actions-upload-release-asset@8f6863c6c894ba46f9e676ef5cccec4752723c1e # v1.9.2
+        id: upload_zip
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./*
-
-      - name: Ensure Destination Path Exists
-        uses: appleboy/ssh-action@823bd89e131d8d508129f9443cad5855e9ba96f0 # v1.2.4
-        if: ${{ contains(github.repository, 'jellyfin/') }}
-        with:
-          host: ${{ secrets.deploy-host }}
-          username: ${{ secrets.deploy-user }}
-          key: ${{ secrets.deploy-key }}
-          script_stop: true
-          script: |-
-            mkdir -p "/srv/incoming/plugin/${{ github.repository }}/${{ github.event.release.tag_name }}" || exit 1
+          asset_path: ./*.zip
 
   publish:
     needs:
       - upload
     runs-on: ubuntu-latest
-    if: ${{ contains(github.repository, 'jellyfin/') }}
-    env:
-      JELLYFIN_REPO: "/srv/repository/main/plugin/manifest.json"
-      JELLYFIN_REPO_URL: "https://repo.jellyfin.org/files/plugin/"
+    permissions:
+      contents: write
     steps:
-      - name: Update Plugin Manifest
-        uses: appleboy/ssh-action@823bd89e131d8d508129f9443cad5855e9ba96f0 # v1.2.4
+      - name: Setup Python
+        uses: actions/setup-python@v2
         with:
-          host: ${{ secrets.deploy-host }}
-          username: ${{ secrets.deploy-user }}
-          key: ${{ secrets.deploy-key }}
-          script_stop: true
-          envs: JELLYFIN_REPO,JELLYFIN_REPO_URL
-          script: |-
-            lockfile="/run/lock/jprm.lock"
-            pushd "/srv/incoming/plugin/${{ github.repository }}/${{ github.event.release.tag_name }}" || exit 1
-            (
-                flock -x 300
-                sudo /usr/local/bin/jprm --verbosity=debug repo add --url="${JELLYFIN_REPO_URL}" "${JELLYFIN_REPO}" ./*.zip || exit 1
-            ) 300>${lockfile}
-            popd || exit 1
-            rm -r "/srv/incoming/plugin/${{ github.repository }}/${{ github.event.release.tag_name }}" || exit 1
+          python-version: '3.10'
+      - name: Setup jprm
+        run: |
+          pip install jprm==1.1.0
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          # Checkout the 'master' branch to push the manifest update.
+          ref: "master"
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifact
+      - name: Update manifest.json
+        run: |
+          jprm repo add ./ /artifacts/* ./*.zip --plugin-url "${{ needs.upload.outputs.release_url }}"
+      - name: Commit and Push manifest.json
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add manifest.json
+          # Check if there are changes to commit
+          if git diff --staged --quiet; then
+            echo "No changes to commit."
+          else
+            echo "Committing updated manifest.json"
+            git commit -m "ci: Update manifest.json for release ${{ github.event.release.name }}"
+            git push
+          fi
