--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,6 +60,18 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./*.zip
+          
+      - name: Upload GH Release md5
+        uses: shogo82148/actions-upload-release-asset@8f6863c6c894ba46f9e676ef5cccec4752723c1e # v1.9.2
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./*.md5
+          
+      - name: Upload GH Release sha256
+        uses: shogo82148/actions-upload-release-asset@8f6863c6c894ba46f9e676ef5cccec4752723c1e # v1.9.2
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./*.sha256
 
   publish:
     needs:
@@ -86,7 +98,7 @@ jobs:
           name: build-artifact
       - name: Update manifest.json
         run: |
-          jprm repo add ./ /artifacts/* ./*.zip --plugin-url "${{ needs.upload.outputs.release_url }}"
+          jprm repo add ./ ./*.zip --plugin-url "${{ needs.upload.outputs.release_url }}"
       - name: Commit and Push manifest.json
         run: |
           git config --global user.name "github-actions[bot]"
