--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,22 @@ jobs:
         with:
           args: ed -L --update "/Project/PropertyGroup/FileVersion" -v "${{ github.event.release.name }}" "Directory.Build.props"
 
+      - name: Update build.yaml Version
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: 'build.yaml'
+          propertyPath: 'version'
+          value: ${{ github.event.release.name }}
+          commitChange: false
+
+      - name: Update build.yaml Changelog
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: 'build.yaml'
+          propertyPath: 'changelog'
+          value: ${{ github.event.release.body  }}
+          commitChange: false
+
       - name: Setup .NET
         uses: actions/setup-dotnet@2016bd2012dba4e32de620c46fe006a3ac9f0602 # v5.0.1
         with:
@@ -39,7 +55,7 @@ jobs:
         with:
           dotnet-target: "net9.0"
 
-      - name: Upload Artifact
+      - name: Upload Main Artifact
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: build-artifact
@@ -47,13 +63,21 @@ jobs:
           if-no-files-found: error
           path: ${{ steps.jprm.outputs.artifact }}
 
-      - name: Upload Artifact
+      - name: Upload Version Artifact
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: version-artifact
           retention-days: 30
           if-no-files-found: error
           path: Directory.Build.props
+
+      - name: Upload Metadata Artifact
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: metadata-artifact
+          retention-days: 30
+          if-no-files-found: error
+          path: build.yaml
 
   upload:
     needs:
@@ -118,31 +142,20 @@ jobs:
           # Checkout the 'master' branch to push the manifest update.
           ref: "master"
 
-      - name: Download Artifact
+      - name: Download Main Artifact
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
 
-      - name: Download Artifact
+      - name: Download Version Artifact
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         with:
           name: version-artifact
 
-      - name: Update build.yaml Version
-        uses: fjogeleit/yaml-update-action@main
+      - name: Download Metadata Artifact
+        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         with:
-          valueFile: 'build.yaml'
-          propertyPath: 'version'
-          value: ${{ github.event.release.name }}
-          commitChange: false
-
-      - name: Update build.yaml Changelog
-        uses: fjogeleit/yaml-update-action@main
-        with:
-          valueFile: 'build.yaml'
-          propertyPath: 'changelog'
-          value: ${{ github.event.release.body  }}
-          commitChange: false
+          name: metadata-artifact
 
       - name: Update manifest.json
         run: |
