--- a/build.yaml
+++ b/build.yaml
@@ -10,6 +10,12 @@ category: General
 owner: Bobthesponge10
 artifacts:
   - Jellyfin.Plugin.AliasResolver.dll
+  - Kawazu.dll
+  - LibNMeCab.dll
+  - LibNMeCab.IpaDicBin.dll
+  - MetaBrainz.Common.dll
+  - MetaBrainz.Common.Json.dll
+  - MetaBrainz.MusicBrainz.dll
   - IpaDic/char.bin
   - IpaDic/matrix.bin
   - IpaDic/sys.dic
